# rendepth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: Rendepth.icns  Rendepth.rc  Rendepth.res
Installer/: install.py  uninstall.py
Installer/Requirements/: amd_linux.txt  amd_windows.txt  apple_mac.txt  apple_silicon.txt  cpu_only.txt  direct_ml.txt  generic_cpu.txt  intel_arc.txt  nvidia_all.txt  nvidia_geforce.txt
Package/: DepthGenerate.py
Package/DepthGenerate/: __main__.py
Shaders/: Icon.frag  Icon.vert  Image.frag  Image.vert  Sprite.frag  Sprite.vert  compile_linux.sh  compile_macos.sh  compile_windows.bat
Shaders/Compiled/: Icon.frag.dxil  Icon.frag.spv  Icon.vert.dxil  Icon.vert.spv  Image.frag.dxil  Image.frag.spv  Image.vert.dxil  Image.vert.spv  Sprite.frag.dxil  Sprite.frag.spv  Sprite.vert.dxil  Sprite.vert.spv
Source/: Core.cpp  Core.h  Image.cpp  Image.h  Main.cpp  Style.cpp  Style.h  Utils.cpp  Utils.h
